<resources>
    <string name="app_name">ICC World Cup 2019 - Fixture and Live Score</string>
    <string name="play_1">
        England vs South Africa.\n
        date: 30 may.\n
        time: 3.30 PM.\n
        venu: Oval, London.\n
        Game no:- 01.
    </string>
    <string name="play_2">
        West Indies vs Pakistan.\n
        date: 31 may\n time: 3.30pm\n
        venu: Trande Bridge\n
        Game no:- 02.
    </string>
    <string name="play_3">

        New Zealand vs Sri Lanka\n
        date: 01 June\n time: 3.30pm\n
        venu: kardif\n
        Game no:- 03.


    </string>
    <string name="play_4">

        Afghanistan vs Australia\n
        date: 01 June\n time: 6.30pm\n
        venu: Bristal\n
        Game no:- 04.

    </string>
    <string name="play_5">

        South Africa vs Bangladesh\n
        date: 02 June\n time: 3.30pm\n
        venu: oval,London\n
        Game no:- 05.


    </string>
    <string name="play_6">

        England vs Pakistan\n
        date: 03 June\n time: 3.30pm\n
        venu: treand bridge\n
        Game no:- 06.

    </string>
    <string name="play_7">

        Afghanistan vs  Sri Lanka\n
        date: 04 June\n time: 3.30pm\n
        venu: kardif\n
        Game no:- 07.

    </string>
    <string name="play_8">

        South Africa vs India\n
        date: 05 June\n time: 3.30pm\n
        venu: oval,London\n
        Game no:- 08.


    </string>
    <string name="play_9">

        Bangladesh vs New Zealand \n
        date: 05 June\n time: 6.30pm\n
        venu: oval,London\n
        Game no:- 09.


    </string>
    <string name="play_10">

        Australia vs  West Indies\n
        date: 06 June\n time: 6.30pm\n
        venu: oval,London\n
        Game no:- 10.


    </string>
    <string name="play_11">

        Pakistan vs  Sri Lanka\n
        date: 07 June\n time: 6.30pm\n
        venu: Bristol\n
        Game no:- 11.

    </string>
    <string name="play_12">

        England vs Bangladesh\n
        date: 08 June\n time: 3.30pm\n
        venu: Kardif\n
        Game no:- 12.


    </string>
    <string name="play_13">

         Afghanistan vs New Zealand\n
        date: 08 June\n time: 6.30pm\n
        venu: tanton\n
        Game no:- 13.
    </string>
    <string name="play_14">
        India vs Australia\n
        date: 09 June\n time: 3.30pm\n
        venu: Oval,London\n
        Game no:- 14.</string>
    <string name="play_15">

        South Africa vs West Indies\n
        date: 10 June\n time: 3.30pm\n
        venu: Soudaampotan\n
        Game no:- 15.
    </string>
    <string name="play_16">

        Bangladesh vs Sri Lanka\n
        date: 11 June\n time: 3.30pm\n
        venu: Bristol\n
        Game no:- 16.
    </string>
    <string name="play_17">

        Australia vs Pakistan\n
        date: 12 June\n time: 3.30pm\n
        venu: tanton\n
        Game no:- 17.

    </string>
    <string name="play_18">

        India vs New Zealand\n
        date: 13 June\n time: 3.30pm\n
        venu: Natinghom\n
        Game no:- 18.

    </string>
    <string name="play_19">

        England vs West Indies\n
        date: 14 June\n time: 3.30pm\n
        venu: Soudaimpotant\n
        Game no:- 19.
    </string>
    <string name="play_20">

        Sri Lanka vs Australia\n
        date: 15 June\n time: 6.30pm\n
        venu: Bristol\n
        Game no:- 20.

    </string>
    <string name="play_21">

        South Africa vs Afghanistan\n
        date: 15 June\n time: 6.30pm\n
        venu: kardif\n
        Game no:- 21.
    </string>
    <string name="play_22">

        India vs Pakistan\n
        date: 16 June\n time: 3.30pm\n
        venu: Old Trafer\n
        Game no:- 22.
    </string>
    <string name="play_23">
        West Indies vs Bangladesh\n
        date: 17 June\n time: 3.30pm\n
        venu: tanton\n
        Game no:- 23.
    </string>
    <string name="play_24">

        England vs Afghanistan\n
        date: 18 June\n time: 3.30pm\n
        venu: Old Trafer\n
        Game no:- 24.
    </string>
    <string name="play_25">

        New Zealand vs South Africa\n
        date: 19 June\n time: 3.30pm\n
        venu: Agebaston\n
        Game no:- 25.
    </string>
    <string name="play_26">

        Australia vs Bangladesh\n
        date: 20 June\n time: 3.30pm\n
        venu: Trande Bridge\n
        Game no:- 26.
    </string>
    <string name="play_27">

        England vs  Sri Lanka\n
        date: 21 June\n time: 3.30pm\n
        venu: Lids\n
        Game no:- 27.

    </string>
    <string name="play_28">

        India vs Afghanistan\n
        date: 22 June\n time: 3.30pm\n
        venu: Soudspoton\n
        Game no:- 28.
    </string>
    <string name="play_29">

        West Indies vs New Zealand\n
        date: 22 June\n time: 6.30pm\n
        venu: Old Trafed\n
        Game no:- 29.
    </string>
    <string name="play_30">
        Pakistan vs South Africa\n
        date: 23 June\n time: 3.30pm\n
        venu: Lords,London\n
        Game no:- 30.
    </string>
    <string name="play_31">

        Bangladesh  vs Afghanistan\n
        date: 24 June\n time: 3.30pm\n
        venu: Soudspoton\n
        Game no:- 31.

    </string>
    <string name="play_32">
        England vs Australia\n
        date: 25 June\n time: 3.30pm\n
        venu: Lords,London\n
        Game no:- 32.
    </string>
    <string name="play_33">
        New Zaeland vs Pakistan\n
        date: 26 June\n time: 3.30pm\n
        venu: Agebaston\n
        Game no:- 33.
    </string>
    <string name="play_34">
        West Indies vs India\n
        date: 27 June\n time: 3.30pm\n
        venu: Old Trafer\n
        Game no:- 34.
    </string>
    <string name="play_35">
        Sri Lanka vs South Africa\n
        date: 28 June\n time: 3.30pm\n
        venu: Chester\n
        Game no:- 35.
    </string>
    <string name="play_36">
        Pakistan vs Afghanistan\n
        date: 29 June\n time: 6.30pm\n
        venu: Holding lids\n
        Game no:- 36.
    </string>
    <string name="play_37">
        New Zealand vs Australia\n
        date: 29 June\n time: 6.30pm\n
        venu: Lords, London\n
        Game no:- 37.
    </string>
    <string name="play_38">
        England vs India\n
        date: 30 June\n time: 6.30pm\n
        venu: Bristol\n
        Game no:- 38.
    </string>
    <string name="play_39">
        Siri Lanka vs West Indies\n
        date: 01 July\n time: 3.30pm\n
        venu: Chestar\n
        Game no:- 39.
    </string>
    <string name="play_40">
        Bangladesh vs India\n
        date: 02 July\n time: 3.30pm\n
        venu: Argebaston\n
        Game no:- 40.
    </string>
    <string name="play_41">
        England vs New Zealand\n
        date: 03 July\n time: 3.30pm\n
        venu: Chestar\n
        Game no:- 41.
    </string>
    <string name="play_42">
        West Indies vs Afghanistan\n
        date: 04 July\n time: 3.30pm\n
        venu: Holding, Leads\n
        Game no:- 42.
    </string>
    <string name="play_43">

        Pakistan vs Bangladesh\n
        date: 05 July\n time: 6.30pm\n
        venu: Lords, London\n
        Game no:- 43.
    </string>
    <string name="play_44">
        Sri Lanka vs India\n
        date: 06 July\n time: 6.30pm\n
        venu: Olding Leads\n
        Game no:- 44.
    </string>
    <string name="play_45">
        Australia vs South Africa\n
        date: 06 July\n time: 6.30pm\n
        venu: Old Trafed\n
        Game no:- 45.
    </string>
    <string name="play_46">
        First Semifinal (1 vs 4)\n
        date: 09 July\n time: 3.30pm\n
        venu: Old trafed\n
        Game no:- 46.
    </string>
    <string name="play_47">
        Second Semifinal (2 vs 3)\n
        date: 11 July\n time: 3.30pm\n
        venu: Agebaston\n
        Game no:- 47.
    </string>
    <string name="play_48">
        Final Match\n
        date: 14 July\n time: 3.30pm\n
        venu: Lords,London\n
        Game no:- 48.

    </string>
    <string name="ranking_1">
       Team: England
        rating:126

    </string>
    <string name="bang">Bangladesh Team</string>
    <string name="mashrafee">1. Mashrafe Mortaza (Captain)</string>
    <string name="tamim">2. Tamim Iqbal </string>
    <string name="shakib">3. Shakib Al Hasan</string>
    <string name="imrul">4. Imrul Kayes </string>
    <string name="summay">5. Summay Sarkar </string>
    <string name="mahmudulla">6. Mahmudullah Riyad </string>
    <string name="mushfik">7. Mushfikur Rahim </string>
    <string name="sabbir">8. Sabbir Rahman </string>
    <string name="liton">9. Liton Das </string>
    <string name="mehedi">10. Mehedi Miraz </string>
    <string name="nasir">11. Nasir Hossain</string>
    <string name="mosadesk">12. Mosaddek Hossain</string>
    <string name="ariful">13. Ariful Islam </string>
    <string name="mustafiz">14. Mustafizu Rrahman</string>
    <string name="taskin">15. Taskin Ahmed</string>
    <string name="abu">16. Abu hyder Rony</string>
    <string name="rubel">17. Rubel Hossain</string>
    <string name="mosharaf">18. Mosharaf Hossain </string>
    <string name="mithun">19. Mohamad Mithun</string>
    <string name="saifuddin">20. Md.Saifuddin</string>
    <string name="safiul">21. Safiul Islam</string>
    <string name="engg">England Team</string>
    <string name="morgan">1. Eoin Morgan (Captain)</string>
    <string name="ali">2.  Moeen Ali </string>
    <string name="bairstow">3. Jonny Bairstow</string>
    <string name="buttler">4. Jos Buttler </string>
    <string name="curran">5. Sam Curran </string>
    <string name="currann">6. Tom Curran </string>
    <string name="hales">7. Alex Hales </string>
    <string name="plunkett">8. Liam Plunkett </string>
    <string name="rashid">9. Adil Rashid </string>
    <string name="root">10. Joe Root </string>
    <string name="roy">11. Jason Roy</string>
    <string name="stokes">12. Ben Stokes</string>
    <string name="stone">13. Olly Stone </string>
    <string name="woakes">14. Chris Woakes</string>
    <string name="wood">15. Mark Wood</string>
    <string name="denly">16. Joe Denly</string>
    <string name="jordan">17. Chris Jordan</string>
    <string name="dawson">18. Liam Dawson</string>
    <string name="broad">19. Stuart Broad</string>
    <string name="leach">20. Jack Leach</string>
    <string name="anderson">21. James anderson</string>
    <string name="ind">India Team</string>
    <string name="Kohli">1. Virat Kohli (Captain)</string>
    <string name="Karthik">2. Dinesh Karthik</string>
    <string name="Dhoni">3. MS Dhoni</string>
    <string name="Dhawan">4. Shikhar Dhawan</string>
    <string name="Jadeja">5.Ravindra Jadeja</string>
    <string name="Sharma">6. Rohit Sharma</string>
    <string name="Sharmaa">7. Ishant Sharma</string>
    <string name="Rahane">8.Ajinkya Rahane </string>
    <string name="Rayudu">9. Ambati Rayudu</string>
    <string name="Pandey">10. Manish Pandey</string>
    <string name="Jadhav">11. Kedar Jadhav</string>
    <string name="Ashwin">12.Ravichandran Ashwin</string>
    <string name="Kumar">13. Bhuvneshwar Kumar</string>
    <string name="westindies75">WestIndies-1975</string>
    <string name="westindies79">WestIndies-1979</string>
    <string name="india83">India-1983</string>
    <string name="australia87">Australia-1987</string>
    <string name="pakistan92">Pakistan-1992</string>
    <string name="srilanka96">Srilanka-1996</string>
    <string name="australia99">Australia-1999</string>
    <string name="australia3">Australia-2003</string>
    <string name="australia7">Australia-2007</string>
    <string name="india11">India-2011</string>
    <string name="australia15">Australia-2015</string>
</resources>